# DBus-simple-communication

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: dbus-test.conf
scripts/: runner.sh
src/: dbus_client.c  dbus_server.c  server.h
